[package]
name = "primes"
version = "0.1.0"
authors = ["Maksim Krzhemenevskiy <regikul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "primes"
crate_type = ["dylib"]

[dependencies]
rustler = "0.21.0"
primes = "0.2.4"
